# flet1.0alpha-pdf-compressor-app

./: .gitignore  GhostFlet PDF.spec  GhostFletInstaller.iss  LICENSE  LICENSE.txt  README.ja.md  README.md  main.py  pyproject.toml  requirements.txt  state.py
assets/: LICENSE.md
components/: __init__.py  select_files.py  sidebar.py
dev/: build.py  bump_version.py
