[project]
name = "pdf-comp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "harumiWeb"}
]
dependencies = [
    "flet>=0.70.0.dev0",
    "pillow>=11.3.0",
    "pyinstaller>=6.15.0",
    "pypdf>=5.9.0",
]

[tool.flet]
org = "harumiWeb"
product = "GhostFlet PDF Compressor"
company = "harumiWeb"
copyright = "Copyright (C) 2025 by harumiWeb"

[tool.flet.app]
path = "."
