[project]
name = "pdf-comp"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "harumiWeb"}
]
dependencies = [
    "flet>=0.70.0.dev0",
    "pypdf>=5.9.0",
]

[tool.flet]
org = "harumiWeb"
product = "GhostFlet PDF Compressor"
company = "harumiWeb"
copyright = "Copyright (C) 2025 by harumiWeb"

[tool.flet.app]
path = "."

[tool.uv.sources]
pyinstaller = { path = "../clean_pyinstaller/pyinstaller" }

[dependency-groups]
dev = [
    "pillow>=11.3.0",
    "pip>=25.2",
    "pyinstaller",
]
