[project]
name = "pdf-comp"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "harumiWeb"}
]
dependencies = [
    "flet>=0.70.0.dev0",
    "pymupdf>=1.26.3",
    "pypdf>=5.9.0",
]

[tool.flet]
org = "harumiWeb"
product = "GhostFlet PDF Compressor"
company = "harumiWeb"
copyright = "Copyright (C) 2025 by harumiWeb"

[tool.flet.app]
path = "."

[tool.uv.sources]
pyinstaller = { path = "../clean_pyinstaller/pyinstaller" }

[tool.taskipy.tasks]
build = "python ./dev/build.py"
bump-patch = "python ./dev/bump_version.py patch"
bump-minor = "python ./dev/bump_version.py minor"
bump-major = "python ./dev/bump_version.py major"
make = '"C:\Program Files (x86)\Inno Setup 6\ISCC.exe" ".\GhostFletInstaller.iss"'

[dependency-groups]
dev = [
    "pillow>=11.3.0",
    "pip>=25.2",
    "pyinstaller",
    "taskipy>=1.14.1",
    "tomlkit>=0.13.3",
]
